--- a/music_app/pubspec.yaml
+++ b/music_app/pubspec.yaml
@@ -61,7 +61,7 @@ flutter:
 
   assets:
     - assets/songs.json
-  #   - images/a_dot_ham.jpeg
+    - assets/itunes_icon.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
