--- a/music_app/pubspec.yaml
+++ b/music_app/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   http: ^1.2.1
+  just_audio: ^0.9.39
+  audio_video_progress_bar: ^2.0.3
+  rxdart: ^0.28.0
 
 dev_dependencies:
   flutter_test:
